--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title> Portifólio - Teo </title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='rest.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <script src='script.js'></script>
+</head>
 
+<body>
+    <div class="container">
+        <header class="perfil">
+            <img class="foto-perfil" src="https://github.com/teotoniojr.png">
+            <div class="titulo-perfil">
+                <h1> Teotonio José de Souza Junior </h1>
+                <h3> Professor de Ciências e Pensamento Computacional </h3>
+            </div>
+        </header>
+        <main>
+            <ul>Projetos<ul>
+                <li><a href="https://teotoniojr.github.io/Calculadora-de-Media/"> 🧮 Calculadora de Médias </a></li>
+                <li><a> ⏱ Conversor de Velocidade </a></li>
+                <li><a> 🎞 SeuFlix - Sua lista de filmes</a></li>
+                <li><a> 🎴 Jogo de Cartas </a></li>
+                <li><a> 🥇 Placar de Pontos </a></li>          
+            </ul>
+        </main>
+    </div>
+    <footer>
+
+    </footer>
+</body>
+</html>
