--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
                 <h3> Professor de Ciências e Pensamento Computacional </h3>
             </div>
         </header>
-        <main>
-            <ul>Projetos<ul>
-                <li><a href="https://teotoniojr.github.io/Calculadora-de-Media/"> 🧮 Calculadora de Médias </a></li>
-                <li><a> ⏱ Conversor de Velocidade </a></li>
-                <li><a> 🎞 SeuFlix - Sua lista de filmes</a></li>
-                <li><a> 🎴 Jogo de Cartas </a></li>
-                <li><a> 🥇 Placar de Pontos </a></li>          
+        <main class="projetos">
+            <ul class="projetos-titulo">Projetos<ul>
+                <li class="projetos-itens"><a href="https://teotoniojr.github.io/Calculadora-de-Media/"> 🧮 Calculadora de Médias </a></li class="projetos-itens">
+                <li class="projetos-itens"><a href="https://teotoniojr.github.io/Conversor-de-Velocidade/"> ⏱ Conversor de Velocidade </a></li class="projetos-itens">
+                <li class="projetos-itens"><a href="https://teotoniojr.github.io/SeuFlix-Sua-Lista-de-Filmes/"> 🎞 SeuFlix - Sua lista de filmes </a></li class="projetos-itens">
+                <li class="projetos-itens"><a href="https://teotoniojr.github.io/Mentalista-Adivinhe-Se-Puder/"> 🔮 Mentalista - Adivinhe se puder </a></li class="projetos-itens">
+                <li class="projetos-itens"><a href=""> 🎴 Jogo de Cartas (Em breve...) </a></li class="projetos-itens">
+                <li class="projetos-itens"><a href=""> 🥇 Placar de Pontos (Em breve...) </a></li class="projetos-itens">          
             </ul>
         </main>
     </div>
